.github/lean_quality/fixtures/research_legacy_refs/negative/legacy/no-new-path.fixture
Formal/AG/Research/Renamed.lean
